pvc-patch-preprod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preprod
  namespace: preprod
spec:
    template:
      spec:
        volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: preprod-pvc
        containers:
        - name: nginx
          volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: storage
